[gd_scene load_steps=13 format=2]

[ext_resource path="res://modular/UserInfo.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_1B.tres" type="DynamicFont" id=2]
[ext_resource path="res://styles/WhiteStylebox.tres" type="StyleBox" id=3]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_0.tres" type="DynamicFont" id=4]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.847059, 0.0980392, 0.129412, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.807843, 0.172549, 0.231373, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.729412, 0.745098, 0.760784, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.752941, 0.752941, 0.752941, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.505882, 0.509804, 0.52549, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.486275, 0.490196, 0.498039, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=8]

[node name="UserInfo" type="Panel"]
margin_left = 362.0
margin_top = 166.0
margin_right = 542.0
margin_bottom = 326.0
rect_min_size = Vector2( 180, 160 )
custom_styles/panel = ExtResource( 3 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 176.0
margin_bottom = 156.0
custom_constants/separation = 4

[node name="InfoPanel1" type="Panel" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 172.0
margin_bottom = 76.0
size_flags_vertical = 3
size_flags_stretch_ratio = 2.81
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/InfoPanel1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 74.0
custom_constants/separation = 0

[node name="UserName" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 164.0
margin_bottom = 13.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Gabriel Fernandez"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer"]
margin_top = 13.0
margin_right = 164.0
margin_bottom = 25.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "PUNTUACION:"
valign = 1

[node name="Punctuation" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "5.2"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer"]
margin_top = 25.0
margin_right = 164.0
margin_bottom = 37.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "IDENTIFICADOR:"
valign = 1

[node name="Id" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 164.0
margin_bottom = 60.0
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 82.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "ESTADO ACTUAL:"

[node name="Risk" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "ALTO RIESGO"

[node name="HBoxContainer4" type="HBoxContainer" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 164.0
margin_bottom = 72.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "HORA DEL EVENTO:"
valign = 1

[node name="EventTime" type="Label" parent="MarginContainer/VBoxContainer/InfoPanel1/MarginContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "2 Dic. 2019 09:39:58"
valign = 1

[node name="Panel2" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 172.0
margin_bottom = 120.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.49
custom_styles/panel = SubResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 38.0
custom_constants/separation = 0

[node name="Label2" type="Label" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 12.0
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "NO. ADVERTENCIAS EN ÃšLTIMAS 12 HORAS"
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 164.0
margin_bottom = 24.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TOTAL RIESGO ALTO:"
valign = 1

[node name="TotalHighRisk" type="Label" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "1"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 164.0
margin_bottom = 36.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "TOTAL RIESGO MEDIO:"

[node name="TotalMedRisk" type="Label" parent="MarginContainer/VBoxContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "0"

[node name="Panel3" type="Panel" parent="MarginContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 172.0
margin_bottom = 152.0
size_flags_vertical = 3
custom_styles/panel = SubResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 2
custom_constants/margin_left = 4
custom_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer"]
margin_left = 4.0
margin_top = 2.0
margin_right = 168.0
margin_bottom = 26.0
custom_constants/separation = 0
alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer/VBoxContainer"]
margin_right = 164.0
margin_bottom = 12.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "VEHICULO #:"
valign = 1

[node name="Vehicle" type="Label" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "CEX23"
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer/VBoxContainer"]
margin_top = 12.0
margin_right = 164.0
margin_bottom = 24.0
size_flags_vertical = 7
custom_constants/separation = 0

[node name="Label4" type="Label" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_right = 82.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "SITIO:"

[node name="Place" type="Label" parent="MarginContainer/VBoxContainer/Panel3/MarginContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
margin_left = 82.0
margin_right = 164.0
margin_bottom = 12.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Spence"

[node name="Button" type="Button" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 5 )
custom_styles/pressed = SubResource( 6 )
custom_styles/focus = SubResource( 7 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 8 )
toggle_mode = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="toggled" from="Button" to="." method="_on_Button_toggled"]
